--- a/Anypoint Studio/Walkthrough/training4-american-ws/pom.xml
+++ b/Anypoint Studio/Walkthrough/training4-american-ws/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.46</version>
         </dependency>
+    	<dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-apikit-module</artifactId>
+            <version>1.1.1</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
     </dependencies>
 
 	<repositories>
